--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="src/index.css" rel="stylesheet" />
     <title>Dev Dashboard</title>
+    <script src="/config.js"></script>
   </head>
   <body>
     <div id="root"></div>
