--- a/packages/vscode-extension/src/webviews/onboarding/onboarding.html
+++ b/packages/vscode-extension/src/webviews/onboarding/onboarding.html
@@ -9,6 +9,15 @@
   <body class="flex min-h-screen items-center justify-center">
     <div class="w-full max-w-md space-y-6 p-8">
       <div class="text-center">
+        <svg
+          class="mx-auto h-8 w-8 pb-2"
+          viewBox="0 0 103 100"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path d="M0 0H21L71 50L21 100H0L50 50L0 0Z" fill="currentColor" />
+          <path d="M32 0H53L103 50L53 100H32L82 50L32 0Z" fill="currentColor" />
+        </svg>
         <h2 class="text-2xl font-bold">Welcome to DevDashboard</h2>
       </div>
 
